--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,18 @@
+html {
+  font-family: "Fira Sans", sans-serif;
+  font-size: larger;
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: "Fira Sans", sans-serif;
-  font-size: larger;
+  height: 100%;
+  position: relative;
+}
+
+#root {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
